--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - by.Reba.Application</title>
+    <title>@ViewData["Title"] - Reba.by</title>
+    <link rel="shortcut icon" href="~/favicon.png"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/by.Reba.Application.styles.css" asp-append-version="true" />
@@ -12,21 +13,16 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">by.Reba.Application</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
+                <a class="navbar-brand" asp-controller="Article" asp-action="Index">
+                    <img class="rounded" src="~/favicon.png" alt="logo" height="100px" width="100px"/>
+                    Reba.by
+                </a>
+                <input class="input-group-text" type="search" placeholder="Search..." />
+                <a class="navbar-brand" asp-controller="User" asp-action="Index">
+                    <img src="~/login.png" alt="login" height="40px" width="40px" />
+                    Войти
+                </a>
+
             </div>
         </nav>
     </header>
