--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar bg-light">
-            <div class="container-fluid">
+            <div class="container-md">
                 <a class="navbar-brand" asp-controller="Article" asp-action="Index">
                     <img src="~/favicon.png" alt="Logo" width="70" height="70">
                     <big>Reba.by</big>
@@ -34,7 +34,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted fixed-bottom">
         <div class="container">
             &copy; 2022 - by.Reba.Application - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
