--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -28,8 +28,9 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
