Added authentication and authorization logic

--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-                <a class="navbar-brand" asp-controller="User" asp-action="Index">
+                <a class="navbar-brand" asp-controller="Account" asp-action="Login">
                     <img src="~/login.png" alt="login" height="40px" width="40px" />
                     Войти
                 </a>
