Added layouts logic for different roles

--- a/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Index.cshtml
@@ -3,6 +3,10 @@
 
 @{
     ViewData["Title"] = "Reba.by";
+    if (Model.IsAdmin)
+    {
+        Layout = "_AdminLayout";
+    }
 }
 
 <nav class="mt-4">
