--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -9,24 +9,10 @@
     <link rel="stylesheet" href="~/by.Reba.AdminPanel.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <partial name="LayoutHeader"></partial>
     <main role="main" class="container-fluid">
         <div class="row">
-            <div class="col-2 h-100 position-fixed" style="background-color:aquamarine">
-                <div class="d-flex flex-column flex-shrink-0 p-3">
-                    <ul class="nav nav-pills flex-column mb-auto">
-                        <li>
-                            <a href="#" class="nav-link link-dark">
-                                Users
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link link-dark">
-                                Articles
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <partial name="AdminNavigation"></partial>
             <div class="col-sm-10 offset-2">
                 @RenderBody()
             </div>
