--- a/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
@@ -2,7 +2,7 @@
 @model ArticlesGridVM
 
 @{
-    ViewData["Title"] = "Articles";
+    ViewData["Title"] = "Новости";
     Layout = "_AdminLayout";
 }
 
@@ -10,19 +10,18 @@
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">     
             @{
-                var filter = new ArticleFilterDataVM()
+                var filter = new SetupArticleFilterVM()
                     {
                         Categories = Model.Categories,
-                        From = Model.From,
-                        To = Model.To,
                         PositivityRatings = Model.PositivityRatings,
-                        Sources = Model.Sources
+                        Sources = Model.Sources,
+                        CurrentFilter = Model.CurrentFilter
                     };
                 }
             <partial name="Filter" model="@filter"></partial>
         </li>
         <li class="nav-item d-flex">
-            <input type="search" placeholder="Поиск" name="searchString" class="form-control me-2"/>
+            <input type="search" placeholder="Поиск" name="searchString" class="form-control me-2" value="@Model.SearchString"/>
             <button type="submit" class="btn btn-outline-success">Поиск</button>
         </li>
         <li class="nav-item">
