Added create article logic

--- a/by.Reba/by.Reba.Application/Views/Article/Filter.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Filter.cshtml
@@ -1,5 +1,5 @@
 ﻿@using by.Reba.Application.Models.Article
-@model SetupArticleFilterVM
+@model ArticleFilterDataVM
 
 <nav class="navbar navbar-light">
     <div class="container-fluid">
