--- a/by.Reba/by.Reba.Application/Views/_ViewImports.cshtml
+++ b/by.Reba/by.Reba.Application/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using by.Reba.Application
 @using by.Reba.Application.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, by.Reba.Application
