--- a/by.Reba/by.Reba.Application/Views/Article/Create.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Create.cshtml
@@ -1,5 +1,50 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using by.Reba.Application.Models.Article
+
+@model CreateArticleVM
+
 @{
+    ViewData["Title"] = "Создать новость";
+}
+<form asp-controller="Article" asp-action="Create" method="post">
+    <div class="mb-3">
+        <label asp-for="Title" class="form-label">Название</label>
+        <input type="text" class="form-control">
+        <span asp-validation-for="Title" class="text-danger"></span>
+
+        <label asp-for="PosterUrl" class="form-label">Превью</label>
+        <input type="url" class="form-control">
+        <span asp-validation-for="PosterUrl" class="text-danger"></span>
+
+        <label asp-for="Text" class="form-label">Контент</label>
+        <input type="text" class="form-control">
+        <span asp-validation-for="Text" class="text-danger"></span>
+        
+        <select class="form-select">
+            @foreach (var category in Model.Categories)
+            {
+                <option value="@category.Id">@category.Title</option>
+            }
+        </select>
+
+        <select class="form-select">
+            @foreach (var source in Model.Sources)
+            {
+                <option value="@source.Id">@source.Name</option>
+            }
+        </select>
+
+        <select class="form-select">
+            @foreach (var rating in Model.Ratings)
+            {
+                <option value="@rating.Id">@rating.Title</option>
+            }
+        </select>
+
+    </div>
+</form>
+
+@section Scripts
+    {
+    <script src="~/lib/jquery-validation//dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
