--- a/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
@@ -9,16 +9,7 @@
 <form asp-controller="Article" asp-action="Grid" method="get">
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">     
-            @{
-                var filter = new SetupArticleFilterVM()
-                    {
-                        Categories = Model.Categories,
-                        PositivityRatings = Model.PositivityRatings,
-                        Sources = Model.Sources,
-                        CurrentFilter = Model.CurrentFilter
-                    };
-                }
-            <partial name="Filter" model="@filter"></partial>
+            <partial name="Filter" model="@Model.FilterData"></partial>
         </li>
         <li class="nav-item d-flex">
             <input type="search" placeholder="Поиск" name="searchString" class="form-control me-2" value="@Model.SearchString"/>
