--- a/by.Reba/by.Reba.Application/Views/Article/Preview.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Preview.cshtml
@@ -1,7 +1,7 @@
 ﻿@using by.Reba.Application.Helpers
 @using by.Reba.Core.DataTransferObjects.Article
 
-@model ArticleDTO
+@model ArticlePreviewDTO
 
 <a asp-controller="Article" asp-action="Details" asp-route-id="@Model.Id" class="text-decoration-none text-black">
     <div class="card h-100">
