--- a/by.Reba/by.Reba.Application/Views/Article/Create.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Create.cshtml
@@ -8,38 +8,27 @@
 <form asp-controller="Article" asp-action="Create" method="post">
     <div class="mb-3">
         <label asp-for="Title" class="form-label">Название</label>
-        <input type="text" class="form-control">
+        <input asp-for="Title" type="text" class="form-control">
         <span asp-validation-for="Title" class="text-danger"></span>
 
         <label asp-for="PosterUrl" class="form-label">Превью</label>
-        <input type="url" class="form-control">
+        <input asp-for="PosterUrl" type="url" class="form-control">
         <span asp-validation-for="PosterUrl" class="text-danger"></span>
 
         <label asp-for="Text" class="form-label">Контент</label>
-        <input type="text" class="form-control">
+        <input asp-for="Text" type="text" class="form-control">
         <span asp-validation-for="Text" class="text-danger"></span>
         
-        <select class="form-select">
-            @foreach (var category in Model.Categories)
-            {
-                <option value="@category.Id">@category.Title</option>
-            }
-        </select>
+        <input type="hidden" value="@Model.Categories"/>
+        <select asp-for="CategoryId" asp-items="@Model.Categories" class="form-select"></select>
 
-        <select class="form-select">
-            @foreach (var source in Model.Sources)
-            {
-                <option value="@source.Id">@source.Name</option>
-            }
-        </select>
+        <input type="hidden" value="@Model.Ratings"/>
+        <select asp-for="RatingId" asp-items="@Model.Ratings" class="form-select"></select>
 
-        <select class="form-select">
-            @foreach (var rating in Model.Ratings)
-            {
-                <option value="@rating.Id">@rating.Title</option>
-            }
-        </select>
+        <input type="hidden" value="@Model.Sources" />
+        <select asp-for="SourceId" asp-items="@Model.Sources" class="form-select"></select>
 
+        <button type="submit" class="btn btn-primary">Подтвердить</button>
     </div>
 </form>
 
