--- a/by.Reba/by.Reba.Application/Views/Article/Filter.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Filter.cshtml
@@ -48,10 +48,10 @@
         }
         <hr />
         <h6>с</h6>
-        <input type="date" name="@nameof(Model.CurrentFilter.From)" value="@Model.CurrentFilter.From.ToString("yyyy-MM-dd")" />
+        <input type="datetime-local" name="@nameof(Model.CurrentFilter.From)" value="@Model.CurrentFilter.From.ToString("yyyy-MM-ddTHH:mm")" />
         <hr />
         <h6>по</h6>
-        <input type="date" name="@nameof(Model.CurrentFilter.To)" value="@Model.CurrentFilter.To.ToString("yyyy-MM-dd")" />
+        <input type="datetime-local" name="@nameof(Model.CurrentFilter.To)" value="@Model.CurrentFilter.To.ToString("yyyy-MM-ddTHH:mm")" />
         <hr />
         <div class="text-center">
             <button class="btn btn-primary" type="submit">Найти</button>
