--- a/by.Reba/by.Reba.Application/Views/Shared/AdminNavigation.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/AdminNavigation.cshtml
@@ -2,14 +2,10 @@
     <div class="d-flex flex-column flex-shrink-0 p-3">
         <ul class="nav nav-pills flex-column mb-auto">
             <li>
-                <a asp-controller="User" asp-action="Grid" class="nav-link link-dark">
-                    Users
-                </a>
+                <a asp-controller="User" asp-action="Grid" class="nav-link link-dark">Пользователи</a>
             </li>
             <li>
-                <a asp-controller="Article" asp-action="Grid" class="nav-link link-dark">
-                    Articles
-                </a>
+                <a asp-controller="Article" asp-action="Grid" class="nav-link link-dark">Новости</a>
             </li>
         </ul>
     </div>
