--- a/by.Reba/by.Reba.Application/Views/Article/Preview.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Preview.cshtml
@@ -14,7 +14,7 @@
                 @ArticleHelper.GetPublicationDateFormatted(Model.PublicationDate)
                 @*<date-formatter date="@Model.PublicationDate"/>*@
                 <span class="float-end">
-                    <img src="~/like.png" alt="like" height="15px" width="15px">
+                    <img src="~/like.svg" alt="like" height="15px" width="15px">
                     <span class="ps-1">@Model.Assessment</span>
                     <span class="ps-1"><img src="~/comment.png" alt="comment" height="15px" width="15px"></span>
                     <span class="ps-1">@Model.CommentsCount</span>
