--- a/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_Layout.cshtml
@@ -7,10 +7,9 @@
     <link rel="shortcut icon" href="~/favicon.png"/>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/by.Reba.Application.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <partial name="LayoutHeader"></partial>
+    <partial name="_LayoutHeader"></partial>
     <div class="container">
         <main role="main">
             @RenderBody()
