--- a/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/Grid.cshtml
@@ -7,10 +7,10 @@
     Layout = "_AdminLayout";
 }
 
-<form asp-controller="Article" asp-action="Grid" method="get">
+<form asp-controller="Article" asp-action="Grid" method="get" id="main-form">
     <ul class="nav nav-pills nav-fill">
         <li class="nav-item">     
-            <partial name="Filter" model="@Model.FilterData"></partial>
+            <partial name="_FilterPartial" model="@Model.FilterData"></partial>
         </li>
         <li class="nav-item d-flex">
             <input type="search" placeholder="Поиск" name="searchString" class="form-control me-2" value="@Model.SearchString"/>
