--- a/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Shared/_AdminLayout.cshtml
@@ -1,18 +1,17 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Admin Panel</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/by.Reba.AdminPanel.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <partial name="LayoutHeader"></partial>
+    <partial name="_LayoutHeader"></partial>
     <main role="main" class="container-fluid">
         <div class="row">
-            <partial name="AdminNavigation"></partial>
+            <partial name="_AdminNavigationPartial"></partial>
             <div class="col-sm-10 offset-2">
                 @RenderBody()
             </div>
