--- a/by.Reba/by.Reba.Application/Views/Article/_WriteCommentPartial.cshtml
+++ b/by.Reba/by.Reba.Application/Views/Article/_WriteCommentPartial.cshtml
@@ -1,7 +1,16 @@
-﻿<form class="card m-3" asp-controller="Comment" asp-action="Create" method="post">
+﻿@using by.Reba.Application.Models.Comment
+@model CreateCommentVM
+
+<form class="card m-3" asp-controller="Comment" asp-action="Create" method="post">
+    <input type="hidden" asp-for="ArticleId" value="@Model.ArticleId" />
+    <input type="hidden" asp-for="ParentCommentId" value="@Model.ParentCommentId" />
+
     <div class="card-body">
-        <textarea type="text flex-shrink-1" name="text" class="form-control" placeholder="Написать комментарий"></textarea>
+        <textarea type="text" asp-for="Content" class="form-control" placeholder="Написать комментарий" onkeyup="resizeTextBox(this)"></textarea>
+        <asp:Textbox />
     </div>
+    <span asp-validation-for="Content" class="text-danger"></span>
+
     <div class="card-footer">
         <button type="submit" class="btn btn-primary">Ответить</button>
     </div>
